<resources>
    <string name="app_name">Selling app</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="sell_your_products">Sell Your Products</string>

    <string-array name="categories">
        <item>Cooler</item>
        <item>Cycle</item>
        <item>Mattress</item>
        <item>Drafter</item>
        <item>Study Table</item>
        <item>Router</item>
        <item>Electrical appliances</item>
        <item>Hardware</item>
        <item>Books</item>
        <item>Others</item>

    </string-array>

    <string-array name="gender">
    <item>Male</item>
    <item>Female</item>
    <item>Others</item>

    </string-array>
</resources>
